--- a/styles.css
+++ b/styles.css
@@ -47,12 +47,12 @@ button {
 
 .event-banner-top-image {
   width: 100%;
-  height: 9rem;
+  height: 6.5rem;
   object-fit: cover;
 }
 
 .event-content {
-  padding: 1.3rem 3rem;
+  padding: 0.8rem 2rem;
 }
 
 .event-card {
@@ -61,12 +61,12 @@ button {
 }
 
 .event-card-title {
-  font-size: 2.2rem;
+  font-size: 1.7rem;
   font-weight: 700;
   color: white;
   background-color: var(--main-color);
-  height: 3.6rem;
-  line-height: 3.6rem;
+  height: 2.9rem;
+  line-height: 2.9rem;
   text-align: center;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -82,9 +82,9 @@ button {
 
 .event-card-text {
   color: var(--third-color);
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   font-weight: 900;
-  padding: 0.6rem 1.8rem;
+  padding: 0.6rem 1rem;
   text-align: center;
   line-height: 1.3;
   letter-spacing: 0.03rem;
@@ -94,7 +94,7 @@ button {
   display: flex;
   margin: 0 1.8rem;
   border-top: 2px dashed #e9a439;
-  padding: 1rem 0;
+  padding: 0.8rem 0;
 }
 
 .event-card-item {
@@ -104,12 +104,12 @@ button {
 
 .event-card-item-image {
   margin: auto;
-  width: 5rem;
+  width: 4rem;
   border-radius: 50%;
 }
 
 .event-card-item-text {
-  font-size: 0.6rem;
+  font-size: 0.5rem;
   color: var(--third-color);
   font-weight: 900;
   line-height: 0.9rem;
@@ -119,7 +119,7 @@ button {
 .event-plus {
   text-align: center;
   color: var(--main-color);
-  font-size: 3.6rem;
+  font-size: 3rem;
   font-weight: 700;
 }
 
@@ -141,14 +141,14 @@ button {
 
 .event-title-text {
   color: var(--text-color);
-  height: 2.5rem;
-  line-height: 2.5rem;
+  height: 2rem;
+  line-height: 2rem;
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
 }
 
 .event-wrap-button {
-  margin: 2rem 0 0;
+  margin: 0.8rem 0;
   text-align: center;
 }
 
@@ -158,11 +158,11 @@ button {
   background-color: var(--main-color);
   color: white;
   width: 85%;
-  height: 4.5rem;
-  line-height: 4.5rem;
-  border-radius: 0.7rem;
+  height: 3.6rem;
+  line-height: 3.6rem;
+  border-radius: 0.6rem;
   font-weight: 700;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
 }
 
 .event-card-underline {
@@ -174,4 +174,18 @@ button {
   -webkit-text-decoration-thickness: 0.3rem;
   -webkit-text-decoration-skip-ink: none;
   -webkit-text-underline-offset: -0.2rem;
+}
+
+@media screen and (min-width: 340px) {
+  .event-content {
+    padding: 1.5rem 3rem;
+  }
+
+  .event-banner-top-image {
+    height: 100%;
+  }
+
+  .event-wrap-button {
+    padding: 1.5rem 0;
+  }
 }
