--- a/styles.css
+++ b/styles.css
@@ -93,9 +93,9 @@ button {
 
 .event-card-text {
   color: var(--third-color);
-  font-size: 2vh;
+  font-size: 2.5vh;
   font-weight: 900;
-  padding: 0.6rem 1rem;
+  padding: 2vh 1rem;
   text-align: center;
   line-height: 1.3;
   letter-spacing: 0.03rem;
@@ -115,12 +115,12 @@ button {
 
 .event-card-item-image {
   margin: auto;
-  width: 85%;
+  width: 8vh;
   border-radius: 50%;
 }
 
 .event-card-item-text {
-  font-size: 1vh;
+  font-size: 1.3vh;
   color: var(--third-color);
   font-weight: 900;
   line-height: 0.9rem;
@@ -130,7 +130,7 @@ button {
 .event-plus {
   text-align: center;
   color: var(--main-color);
-  font-size: 3rem;
+  font-size: 4vh;
   font-weight: 700;
 }
 
@@ -141,7 +141,7 @@ button {
 }
 
 .event-card-image img {
-  width: 85%;
+  width: 40vh;
   margin: auto;
 }
 
@@ -159,7 +159,7 @@ button {
 }
 
 .event-wrap-button {
-  margin: 2vh 0;
+  margin: 3vh 0;
   text-align: center;
 }
 
