--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ button {
 
 .event-banner-top-image {
   width: 100%;
-  height: 12vh;
+  height: 14vh;
   object-fit: cover;
 }
 
@@ -169,11 +169,11 @@ button {
   background-color: var(--main-color);
   color: white;
   width: 85%;
-  height: 3.6rem;
-  line-height: 3.6rem;
+  height: 5.5vh;
+  line-height: 5.5vh;
   border-radius: 0.6rem;
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: 2.4vh;
 }
 
 .event-card-underline {
