--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ button {
   font-size: 1.3vh;
   color: var(--third-color);
   font-weight: 900;
-  line-height: 0.9rem;
+  line-height: 1.8vh;
   margin-top: 0.3rem;
 }
 
@@ -186,17 +186,3 @@ button {
   -webkit-text-decoration-skip-ink: none;
   -webkit-text-underline-offset: -0.2rem;
 }
-
-/* @media screen and (min-width: 320px) {
-  .event-content {
-    padding: 1.5rem 3rem;
-  }
-
-  .event-banner-top-image {
-    height: 100%;
-  }
-
-  .event-wrap-button {
-    padding: 1.5rem 0;
-  }
-} */
